private route ui updated to only show private route header links when logged in

--- a/src/App.css
+++ b/src/App.css
@@ -247,7 +247,10 @@ label{
 #my-recipes{
     height: 25vh;
     margin-top: 10rem;
+    font-weight: 400;
 }
+
+
 
 .list-header{
     display: flex;
